--- a/Fernando/WebContent/Descargar.zul
+++ b/Fernando/WebContent/Descargar.zul
@@ -4,7 +4,7 @@
 New Content Here!
 <vbox> 
 	<button id="btnSubir" label="Subir"/>
-	<button id="btnDescargar" label="Descargar"/>
+	<button id="btnDescargar" label="escargar"/>
 </vbox>
 </window>
 </zk>
