se agrego la clase filtros, para agregarle estos a la listbox

--- a/Fernando/WebContent/widgets/input/form_sample/style.css
+++ b/Fernando/WebContent/widgets/input/form_sample/style.css
@@ -1,6 +1,125 @@
-.hightlight { 
-	color: #1469AB; font-weight: bold; 
+.fgrid tr.z-row td.z-row-inner,tr.z-row,div.z-grid-body
+        div.z-cell,div.z-grid {
+	border: none;
+	overflow: hidden;
+	zoom: 1;
+	background: white;
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: none;
 }
-.error {
-	color: red; 
+
+.fgrid .z-grid-odd .fgrid .z-row-inner,.fgrid .z-grid-odd
+        .z-cell {
+	background-color: #F7F7F7;
+	border-bottom: 1px solid transparent;
+	border-left: 1px solid transparent;
+	border-top: 1px solid transparent;
 }
+
+.fgrid .z-grid-odd .fgrid.z-row-inner,.fgrid.z-grid-odd
+        .z-cell,.fgrid.z-grid-odd {
+	background: none repeat scroll 0 0 transparent;
+}
+
+.fgrid tr.z-grid-odd td.z-row-inner,.fgrid tr.z-grid-odd
+        .z-cell,.fgrid tr.z-grid-odd {
+	background: white
+}
+
+.fgrid tr.z-row td.z-row-inner,.fgrid tr.z-row .z-cell {
+	background: white;
+	border-top: none;
+}
+
+.banner {
+	background-color: #275280;
+	color: white;
+	padding: 5px 10px;
+	background-image: url("./../../imagenes/portal-principal/reflejosbanner.png");
+	background-repeat: no-repeat;
+}
+
+.banner-head {
+	font-size: 20px;
+}
+
+.banner .logout {
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+.footer {
+	background-color: #275280;
+	color: white;
+	padding-top: 5px;
+}
+
+.footer a,.footer a:VISITED {
+	color: white;
+}
+
+.sidebar a,.sidebar a:VISITED {
+	color: black;
+	text-decoration: none;
+}
+
+.sidebar-fn {
+	cursor: pointer;
+}
+
+.head1 {
+	font-size: large;
+}
+
+.head2 {
+	font-size: medium;
+}
+
+.row-title .z-label {
+	font-weight: bold;
+	color: #636363;
+}
+
+.fn-caption .z-caption-l {
+	font-weight: bold;
+	font-size: small;
+	color: #636363;
+}
+
+.complete-todo .z-label {
+	text-decoration: line-through;
+}
+
+.warn {
+	color: red;
+}
+
+.demo-main a,.demo-main a:VISITED {
+	color: #636363;
+	text-decoration: underline;
+	font-size: smaller;
+}
+
+.todo-box {
+	padding-right: 4px;
+}
+
+.water-mark { 
+        color: gray; font-style: italic; 
+    }
+
+form {
+        border: 1px solid #E1E1E1;
+        background: url('../widgets/effects/form_effect/img/bg.png');
+        padding: 20px 20px;
+        -webkit-border-radius:4px;
+        -moz-border-radius:4px;
+        border-radius:4px;
+    }
+.form .name {
+        display: block;
+        width: 100px;
+        text-align: center;
+    } 
