--- a/Fernando/WebContent/pruebaVM.zul
+++ b/Fernando/WebContent/pruebaVM.zul
@@ -22,7 +22,7 @@
     </style>
 
 <window id="ventana" title="Registro Profesores" border="normal" sclass="sysWin" contentStyle="overflow:auto" apply="org.zkoss.bind.BindComposer"
-                                viewModel="@id('vm') @init('com.sigarep.viewmodels.VMprofesor')" >
+                               height="700px" viewModel="@id('vm') @init('com.sigarep.viewmodels.VMprofesor')" >
    <style src="/widgets/input/form_sample/style.css" />
    	<grid sclass="fgrid">
    	<auxhead>
@@ -79,8 +79,20 @@
    	<caption label="Listado de Profesores" />
    	<space />
    	<space />
-   	<listbox id="profeListbox" height="160px" model="@bind(vm.listaProfesor)" selectedItem="@bind(vm.profeseleccionado)"   
+   	<listbox id="profeListbox" height="260px" model="@bind(vm.listaProfesor)" selectedItem="@bind(vm.profeseleccionado)"   
    			 onSelect="@command('mostrarSeleccionado')" emptyMessage="No hay profesores registrados" mold="paging" pageSize="5">
+   		<auxhead sclass="category-center">
+   		     <auxheader colspan="1" align="center">
+                <textbox instant="true"  width="100px"/>
+            </auxheader>
+             <auxheader colspan="1" align="center">
+                <textbox instant="true"  width="100px"/>
+            </auxheader>
+             <auxheader colspan="1" align="center">
+                <textbox instant="true"  width="100px"/>
+            </auxheader>
+   		</auxhead>
+   			 
 		<listhead>
 			<listheader label="Nombre" align="center" sort="auto(nombre)" />
 			<listheader label="Apellido" align="center" sort="auto(apellido)" />
