--- a/Fernando/WebContent/pruebaVM.zul
+++ b/Fernando/WebContent/pruebaVM.zul
@@ -82,14 +82,14 @@
    	<listbox id="profeListbox" height="260px" model="@bind(vm.listaProfesor)" selectedItem="@bind(vm.profeseleccionado)"   
    			 onSelect="@command('mostrarSeleccionado')" emptyMessage="No hay profesores registrados" mold="paging" pageSize="5">
    		<auxhead sclass="category-center">
-   		     <auxheader colspan="1" align="center">
-                <textbox instant="true"  width="100px"/>
+   		     <auxheader colspan="1" align="center" image="images/search-016x016.png">
+                <textbox instant="true"  width="100px" />
             </auxheader>
-             <auxheader colspan="1" align="center">
-                <textbox instant="true"  width="100px"/>
+             <auxheader colspan="1" align="center" image="images/search-016x016.png">
+                <textbox instant="true"  width="100px" />
             </auxheader>
-             <auxheader colspan="1" align="center">
-                <textbox instant="true"  width="100px"/>
+             <auxheader colspan="1" align="center" image="images/search-016x016.png">
+                <textbox instant="true"  width="100px" />
             </auxheader>
    		</auxhead>
    			 
